--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/juan054/amoblarte.design/issues"
   },
-  "homepage": "https://github.com/juan054/amoblarte.design#readme"
+  "homepage": "https://github.com/juan054/amoblarte.design#readme",
+  "dependencies": {
+    "aos": "^2.3.4"
+  }
 }
